Destop version is ended

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -142,10 +142,10 @@
                             <img src="icons/about_me/web_development.svg" alt="web-dev">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz14 price__type">
                                 Web-разработка
                             </div>
-                            <div class="about__skills-text">
+                            <div class="about__skills-text title_fz12">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                             </div>
                         </div>
@@ -155,10 +155,10 @@
                             <img src="icons/about_me/mobile_dev.svg" alt="mobile-dev">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz14 price__type">
                                 Разработка приложений
                             </div>
-                            <div class="about__skills-text">
+                            <div class="about__skills-text title_fz12">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                             </div>
                         </div>
@@ -168,10 +168,10 @@
                             <img src="icons/about_me/design.svg" alt="design">
                         </div>
                         <div>
-                            <div class="title title_fz14">
+                            <div class="title title_fz14 price__type">
                                 UI/UX Design
                             </div>
-                            <div class="about__skills-text">
+                            <div class="about__skills-text title_fz12">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                             </div>
                         </div>
@@ -182,8 +182,8 @@
 	</section>
 	<section class="resume">
 		<div class="container">
-			<h2 class="title title_fz16 resume__title">More about me</h2>
-			<div class="title title_fz36 resume__subtitle">Experience</div>
+			<h2 class="title title_fz16 title__section-title">More about me</h2>
+			<div class="title title_fz36 title__section-subtitle">Experience</div>
 			<div class="divider"></div>
 			<div class="resume__wrapper">
 				<div class="resume__column">
@@ -195,7 +195,7 @@
 									<div class="resume__item-icon">
 										<img src="icons/experience/university.svg" alt="university">
 									</div>
-									<h4 class="title title_fz14">Catholic University of Lublin</h4>
+									<h4 class="title title_fz14 price__type">Catholic University of Lublin</h4>
 									<div class="resume__item-majority">Master's degree | Lublin (2017-2019)</div>
 								</div> 
 								<div class="resume__item-body">
@@ -209,7 +209,7 @@
 									<div class="resume__item-icon">
 										<img src="icons/experience/courses.svg" alt="courses">
 									</div>
-									<h4 class="title title_fz14">Udemy</h4>
+									<h4 class="title title_fz14 price__type">Udemy</h4>
 									<div class="resume__item-majority">Web development courses</div>
 								</div> 
 								<div class="resume__item-body">
@@ -228,7 +228,7 @@
 									<div class="resume__item-icon">
 										<img src="icons/experience/developer.svg" alt="develope">
 									</div>
-									<h4 class="title title_fz14">Front-End Developer</h4>
+									<h4 class="title title_fz14 price__type">Front-End Developer</h4>
 									<div class="resume__item-majority">EPAM | Moscow (2018-2019)</div>
 								</div> 
 								<div class="resume__item-body">
@@ -242,7 +242,7 @@
 									<div class="resume__item-icon">
 										<img src="icons/experience/designer.svg" alt="/designer">
 									</div>
-									<h4 class="title title_fz14">UI/UX Designer</h4>
+									<h4 class="title title_fz14 price__type">UI/UX Designer</h4>
 									<div class="resume__item-majority">Squad Team | Moscow (2018)</div>
 								</div> 
 								<div class="resume__item-body">
@@ -258,8 +258,8 @@
 
 	<section class="skills">
 		<div class="container">
-			<h2 class="title title_fz16 skills__title">Skills</h2>
-			<div class="title title_fz36 skills__subtitle">What I use in my work</div>
+			<h2 class="title title_fz16 title__section-title">Skills</h2>
+			<div class="title title_fz36 title__section-subtitle">What I use in my work</div>
 			<div class="divider"></div>
 
 			<div class="skills__wrapper">
@@ -268,100 +268,219 @@
 						<img src="icons/skills/html5.svg" alt="html5">
 					</div>
 					<h4 class="skills__header">HTML5</h4>
-					<div class="skills__body">It creates the structure of your site or application, the fifth version will allow me to create a more SEO-optimized structure of your product</div>
+					<div class="title_fz12">It creates the structure of your site or application, the fifth version will allow me to create a more SEO-optimized structure of your product</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/css3.svg" alt="css3">
 					</div>
 					<h4 class="skills__header">CSS3</h4>
-					<div class="skills__body">This style language allows me to create absolutely any appearance of your site or app. Everything is limited only by your imagination!</div>
+					<div class="title_fz12">This style language allows me to create absolutely any appearance of your site or app. Everything is limited only by your imagination!</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/js.svg" alt="js">
 					</div>
 					<h4 class="skills__header">Java Script</h4>
-					<div class="skills__body">This programming language allows you to animate anything: sliders, Windows, hints, tabs, getting data from the server, and much more</div>
+					<div class="title_fz12">This programming language allows you to animate anything: sliders, Windows, hints, tabs, getting data from the server, and much more</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/jquery.svg" alt="jquery">
 					</div>
 					<h4 class="skills__header">Jquery</h4>
-					<div class="skills__body">The Jquery library will speed up development. We won't integrate it into our project without the need, by the way I have skills to work with it</div>
+					<div class="title_fz12">The Jquery library will speed up development. We won't integrate it into our project without the need, by the way I have skills to work with it</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/react.svg" alt="react">
 					</div>
 					<h4 class="skills__header">React</h4>
-					<div class="skills__body">This library allows you to create web applications. I can create the most interactive product for your specific goals</div>
+					<div class="title_fz12">This library allows you to create web applications. I can create the most interactive product for your specific goals</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/node.js.svg" alt="node.js">
 					</div>
 					<h4 class="skills__header">Node.js</h4>
-					<div class="skills__body">This platform allows you to create a backend for your product — "brains” that will perform actions that the user does not see</div>
+					<div class="title_fz12">This platform allows you to create a backend for your product — "brains” that will perform actions that the user does not see</div>
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
 						<img src="icons/skills/mongo.db.svg" alt="mongo.db">
 					</div>
 					<h4 class="skills__header">Mongo.db</h4>
-					<div class="skills__body">This is not a relational database that will store your site or app data</div>
+					<div class="title_fz12">This is not a relational database that will store your site or app data</div>
 				</div>
 			</div>
-			
-			
+				
 			<div class="skills__ratings">
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Creation of websites</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Creation of websites</div>
 					<div class="skills__ratings-counter">100%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Creating of web apps</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Creating of web apps</div>
 					<div class="skills__ratings-counter">85%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Works with data</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Works with data</div>
 					<div class="skills__ratings-counter">90%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Creativity</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Creativity</div>
 					<div class="skills__ratings-counter">75%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Creating a design</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Creating a design</div>
 					<div class="skills__ratings-counter">90%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="skills__ratings-item">
-					<div class="title title_fz14 skills__ratings-title">Soft skills</div>
+					<div class="title title_fz14 price__type skills__ratings-title">Soft skills</div>
 					<div class="skills__ratings-counter">95%</div>
 					<div class="skills__ratings-line">
-						<span style="width: 85%"></span>
+						<span></span>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<section class="portfolio">
+		<div class="container">
+			<h2 class="title title_fz16 title__section-title">Portfolio</h2>
+			<div class="title title_fz36 title__section-subtitle">My projects</div>
+			<div class="divider"></div>
+			<div class="portfolio__wrapper">
+				<a href="#" class="portfolio__item">
+					<img src="img/works/uber.jpg" alt="uber">
+				</a>
+				<a href="#" class="portfolio__item">
+					<img src="img/works/pulse.jpg" alt="pulse">
+				</a>
+				<a href="#" class="portfolio__item">
+					<img src="img/works/bread.jpg" alt="bread">
+				</a>
+				<a href="#" class="portfolio__item vertical">
+					<img src="img/works/plans.jpg" alt="plans">
+				</a>
+				<a href="#" class="portfolio__item">
+					<img src="img/works/ipad.jpg" alt="ipad">
+				</a>
+				<a href="#" class="portfolio__item horizonatal">
+					<img src="img/works/mac.jpg" alt="mac">
+				</a>
+			</div>
+			
+		</div>
+	</section>
+
+	<section class="price">
+		<div class="container">
+			<h2 class="title title_fz16 title__section-title">Price list</h2>
+			<div class="divider divider_lower"></div>
+
+			<div class="price__wrapper">
+				<div class="price__item">
+					<h4 class="title title_fz14 price__type">Landing-page</h4>
+					<div class="price__total title title_fz14">from 100 $</div>
+					<div class="price__body title_fz12">
+						One-page website for the presentation of services/products/...</div>
+				</div>
+				<div class="price__item">
+					<h4 class="title title_fz14 price__type">Web application</h4>
+					<div class="price__total title title_fz14">from 360 $</div>
+					<div class="price__body title_fz12">
+						Web applications run "inside" a browser; no complex installation is needed</div>
+				</div>
+				<div class="price__item">
+					<h4 class="title title_fz14 price__type">Corporate web site</h4>
+					<div class="price__total title title_fz14">from 260 $</div>
+					<div class="price__body title_fz12">
+						Website for your business or company
+					</div>
+				</div>
+				<div class="price__item">
+					<h4 class="title title_fz14 price__type">E-commerce website</h4>
+					<div class="price__total title title_fz14">from 400 $</div>
+					<div class="price__body title_fz12">
+						Allow you to sell goods and services over the internet</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="contacts">
+		<div class="container">
+			<div class="contacts__wrapper">
+				<div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="photo">
+				</div>
+				<div class="contacts__description">
+					<h2 class="title title_fz16 contacts__title">Contacts</h2>
+                    <div class="title title_fz36 contacts__subtitle">Contact me</div>
+					<div class="divider"></div>
+					
+					<div class="title title_fz14 contacts__text">
+						In any way convenient for you:
+					</div>
+					<div class="contacts__social">
+						<a href="#" class="contacts__link">
+							<img src="icons/social/Facebook_str.svg" alt="Facebook">
+						</a>
+						<a href="#" class="contacts__link">
+							<img src="icons/social/Instagram_str.svg" alt="Instagram">
+						</a>
+						<a href="#" class="contacts__link">
+							<img src="icons/social/Telegram_str.svg" alt="Telegram">
+						</a>
+					</div>
+					<div class="title title_fz14 contacts__callback">
+						Или оставьте ваши данные и я сама вам напишу:
+					</div>
+
+					<form action="#" class="contacts__form">
+						<div class="contacts__input">
+							<input required type="text" name="name" id="name">
+							<label for="name">Your name</label>
+						</div>
+						<div class="contacts__input">
+							<input required type="text" name="email" id="email">
+							<label for="email">Your email</label>
+						</div>
+						<div class="contacts__textarea">
+							<textarea name="textarea" id="textarea"></textarea>
+							<label for="textarea">Your message</label>
+						</div>
+						<div class="contacts__triggers">
+							<div>
+								<button class="btn contacts__btn">Send a message</button>
+							</div>
+							<div class="contacts__policy"> 
+								<input required type="checkbox">
+								<span>I agree to the<a href="/policy.html"> privacy policy</a></span>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 
     <script src="js/script.js"></script>
 </body>
