--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
     <aside class="sidepanel">
         <a href="#" class="sidepanel__link">
@@ -74,16 +75,18 @@
                 </svg>
             </div>
 
-            <nav>
-                <ul class="menu__list">
-                    <li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
-                    <li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
-                    <li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
-                    <li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
-                    <li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
-                    <li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
-                </ul>
-            </nav>
+            <div class="menu__responsible">
+				<nav>
+					<ul class="menu__list">
+						<li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
+						<li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
+						<li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
+						<li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
+						<li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
+						<li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
+					</ul>
+				</nav>
+			</div>
 
             <div class="menu__social">
                 <a href="#">
@@ -124,7 +127,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <!-- <section class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
@@ -480,7 +483,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
     <script src="js/script.js"></script>
 </body>
