--- a/src/index.html
+++ b/src/index.html
@@ -127,12 +127,15 @@
         </div>
     </section>
 
-    <!-- <section class="about">
+    <section class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="photo">
-                </div>
+					<img src="img/main_photo.jpg" alt="photo">
+				</div>
+				<div class="about__mobilephoto">
+					<img src="img/main_mobile.jpg" alt="photo_mob">
+				</div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">About me</h2>
                     <div class="title title_fz36 about__subtitle">Меня зовут Александра</div>
@@ -183,7 +186,7 @@
             </div>
         </div>
 	</section>
-	<section class="resume">
+	<!-- <section class="resume">
 		<div class="container">
 			<h2 class="title title_fz16 title__section-title">More about me</h2>
 			<div class="title title_fz36 title__section-subtitle">Experience</div>
