--- a/src/index.html
+++ b/src/index.html
@@ -131,10 +131,13 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-					<img src="img/main_photo.jpg" alt="photo">
-				</div>
-				<div class="about__mobilephoto">
-					<img src="img/main_mobile.jpg" alt="photo_mob">
+					<picture>
+						<source media="(max-width: 576px)" srcset="img/main_mobile.webp">
+						<source media="(max-width: 576px)" srcset="img/main_mobile.jpg">
+						<source media="(min-width: 577px)" srcset="img/main_photo.webp">
+						<img src="img/main_photo.jpg" alt="main_photo">
+					</picture>
+
 				</div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">About me</h2>
@@ -186,7 +189,7 @@
             </div>
         </div>
 	</section>
-	<!-- <section class="resume">
+	<section class="resume">
 		<div class="container">
 			<h2 class="title title_fz16 title__section-title">More about me</h2>
 			<div class="title title_fz36 title__section-subtitle">Experience</div>
@@ -292,7 +295,7 @@
 				</div>
 				<div class="skills__column">
 					<div class="skills__itme-img">
-						<img src="icons/skills/jquery.svg" alt="jquery">
+						<img class="jquery" src="icons/skills/jquery.svg" alt="jquery">
 					</div>
 					<h4 class="skills__header">Jquery</h4>
 					<div class="title_fz12">The Jquery library will speed up development. We won't integrate it into our project without the need, by the way I have skills to work with it</div>
@@ -429,18 +432,26 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> 
 
 	<section class="contacts">
 		<div class="container">
 			<div class="contacts__wrapper">
+
 				<div class="contacts__photo">
-                    <img src="img/main_photo.jpg" alt="photo">
+					<!-- <img src="img/main_photo.jpg" alt="photo"> -->
+					 <picture>
+						<source media="(min-width: 769px)" srcset="img/main_photo.webp">
+						<source media="(max-width: 769px)" srcset="img/main_photo.jpg">
+						<img src="img/main_photo.jpg" alt="main_photo">  
+					</picture>
 				</div>
+
+
 				<div class="contacts__description">
 					<h2 class="title title_fz16 contacts__title">Contacts</h2>
                     <div class="title title_fz36 contacts__subtitle">Contact me</div>
-					<div class="divider"></div>
+					<div class="divider contacts__divider"></div>
 					
 					<div class="title title_fz14 contacts__text">
 						In any way convenient for you:
@@ -457,7 +468,7 @@
 						</a>
 					</div>
 					<div class="title title_fz14 contacts__callback">
-						Или оставьте ваши данные и я сама вам напишу:
+						Or leave your details and I'll write to you myself:
 					</div>
 
 					<form action="#" class="contacts__form">
@@ -486,7 +497,7 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 
     <script src="js/script.js"></script>
 </body>
