--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
-    <meta name="title" content="Мое портфолио">
-    <meta name="description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+    <meta name="title" content="My portfolio">
+    <meta name="description" content="Here you can see my work and find out more about me">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="Мое портфолио">
-    <meta property="og:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+    <meta property="og:title" content="My portfolio">
+    <meta property="og:description" content="Here you can see my work and find out more about me">
     <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
-    <meta property="twitter:title" content="Мое портфолио">
-    <meta property="twitter:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+    <meta property="twitter:title" content="My portfolio">
+    <meta property="twitter:description" content="Here you can see my work and find out more about me">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Favicon  -->
@@ -64,7 +64,7 @@
             </svg>
         </a>
         <div class="sidepanel__divider"></div>
-        <div class="sidepanel__text"><span>Социальные сети</span></div>
+        <div class="sidepanel__text"><span>Social networks</span></div>
     </aside>
 
     <div class="menu">
@@ -78,12 +78,12 @@
             <div class="menu__responsible">
 				<nav>
 					<ul class="menu__list">
-						<li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
-						<li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
-						<li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
-						<li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
-						<li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
-						<li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
+						<li class="menu__link"><a href="#">ABOUT ME</a></li>
+						<li class="menu__link"><a href="#">MY EXPERIENCE</a></li>
+						<li class="menu__link"><a href="#">MY SKILLS</a></li>
+						<li class="menu__link"><a href="#">MY WORKS</a></li>
+						<li class="menu__link"><a href="#">PRICE LIST</a></li>
+						<li class="menu__link"><a href="#">CONTACTS</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -118,10 +118,10 @@
             <span></span>
         </div>
         <div class="container">
-            <div class="title title_fz16 promo__subtitle">Меня зовут Александра Смит</div>
-            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Москва</h1>
+            <div class="title title_fz16 promo__subtitle">My name is Alexandra Smith</div>
+            <h1 class="title title_fz48 promo__title">I am a web developer from Riga</h1>
             <div class="promo__btns">
-                <a href="#" class="promo__link btn">Портфолио</a>
+                <a href="#" class="promo__link btn">Portfolio</a>
                 <a href="#" class="promo__link">About me</a>
             </div>
         </div>
@@ -141,7 +141,7 @@
 				</div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">About me</h2>
-                    <div class="title title_fz36 about__subtitle">Меня зовут Александра</div>
+                    <div class="title title_fz36 about__subtitle">My name is Alexandra</div>
                     <div class="divider"></div>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
@@ -152,7 +152,7 @@
                         </div>
                         <div>
                             <div class="title title_fz14 price__type">
-                                Web-разработка
+                                Web-developement
                             </div>
                             <div class="about__skills-text title_fz12">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -165,7 +165,7 @@
                         </div>
                         <div>
                             <div class="title title_fz14 price__type">
-                                Разработка приложений
+                                Application Development
                             </div>
                             <div class="about__skills-text title_fz12">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -439,7 +439,6 @@
 			<div class="contacts__wrapper">
 
 				<div class="contacts__photo">
-					<!-- <img src="img/main_photo.jpg" alt="photo"> -->
 					 <picture>
 						<source media="(min-width: 769px)" srcset="img/main_photo.webp">
 						<source media="(max-width: 769px)" srcset="img/main_photo.jpg">
